fixed mobile alignment

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 canvas {
   position: fixed;
   top: 0;
@@ -18,7 +23,7 @@ canvas {
 header {
   grid-column: 2 / span 5;
   font-size: 2rem;
-  margin: 5rem 10rem 25rem 0rem;
+  margin: 2rem 10rem 25rem 0rem;
   line-height: 5rem;
 }
 
@@ -59,9 +64,8 @@ section {
   font-size: 1.25rem;
 }
 
-#progress-bar-container {
-  width: 100%;
-  height: 1rem;
+#progress-bar {
+  display: block;
 }
 
 .project {
@@ -108,6 +112,15 @@ section {
     text-align: center;
     grid-column: 2 / span 10;
     padding: 1rem 2rem;
+  }
+
+  .footer {
+    flex-direction: column;
+    line-height: 4rem;
+  }
+
+  .socials {
+    width: 100%;
   }
 
   .project {
